--- a/templates/index.html
+++ b/templates/index.html
@@ -1,30 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jovian Careers</title>
-    <link type="text/css" rel="stylesheet" href="{{url_for('static',filename='css/bootstrap.min.css')}}">
-    <!--<link rel="stylesheet" type="text/css" href="static/css/index.css"/>-->
-    <!--{{url_for('static',filename='css/index.css')}}-->
-    <style>
-        #banner{
-            height: 360px;
-            width: 100%;
-            object-fit: cover;
-            margin-bottom: 16px;
-        }
-    </style>
-</head>
+    <title>Ekwe Careers</title>
+    {% include 'bootstrap.html' %}
+   </head>
 <body >
    {% include 'nav.html' %}
-   <img id="banner" src="static/banner.jpg" alt="banner image">
-    <div >
-        <h1 class="text-center mt-2 mb-4">{{company_name}} Careers</h1>
-    </div>
-    <<div class="container">
-        <h3 class="text-center mt-2">About {{company_name}}</h3>
-       <div class="row mb-16">
+   {% include 'banner.html' %}
+    
+    <div class="container">
+        <h1 class="text-center mt-2 mb-4">Ekwe Careers</h1>
+        <div class="row" style="margin-bottom: 32px;">
             <div class="col-md-6">        
                 <p class="lead">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
