--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,16 +1,17 @@
-<nav class="navbar shadow-sm fixed-top bg-white ms-2 row height-5">
-    <div class="container=fluid">
-        <a class="navbar-brand" href="#">
-            <img src="static/bootstrap-logo.svg" alt=""
+<nav class="navbar shadow-sm fixed-top bg-white p-3 height-5 row">
+    <div class="container=fluid col">
+        <a class="navbar-brand" href="/">
+            <img src="{{url_for('static',filename='bootstrap-logo.svg')}}" alt="logo"
             width="20" height="24" >
             Ekwe
         </a>
-        <ul class="nav justify-content-end">
+        <ul class="nav justify-content-end col mt-0">
             <li  class="nav-item"><a href="#top" class="nav-link px-2 text-body-secondary">Home</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Vacancies</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Latest Job Alerts</a></li>
+            <li class="nav-item"><a href="mailto:hilarychi@gmail.com?subject:Enquiries" class="nav-link px-2 text-body-secondary">Contact Us</a></li>
         </ul>
         </div>
     </div>
 </nav>
-<div style="height: 10px;"></div>
+<div style="height: 10px;" class="m-2"></div>
