Added submit button

--- a/templates/application_form.html
+++ b/templates/application_form.html
@@ -7,6 +7,7 @@
         <label for="email">E - Mail</label><br>
         <input type="text" name="email" placeholder="hilarychizi@gmail.com.com" id="email" class="mb-2"><br>
         <label for="linkedIn">LinkedIn URL</label><br>
-        <input type="text" name="linkedIn" placeholder="https://linked.in/hilarychizi" id="linkedIn" class="mb-2"><br>
+         <input type="text" name="linkedIn" placeholder="https://linked.in/hilarychizi" id="linkedIn" class="mb-2"><br>
+         <input type="submit" name="submit" id="submit">
     </form>
 </div>
