Store application in db

--- a/templates/application_form.html
+++ b/templates/application_form.html
@@ -12,7 +12,7 @@
 
          <div class="mb-2">
             <label for="linkedIn">LinkedIn URL</label><br>
-            <input type="text" name="linkedIn" placeholder="https://linked.in/hilarychizi" id="linkedIn">            
+            <input type="text" name="linkedin" placeholder="https://linked.in/hilarychizi" id="linkedIn">            
          </div>
         <div class="mb-2">
             <label for="education">Education</label><br>
